refactor(user-service): switch ids to UUID v7 + flip Auth/User FK direction (Phase 2)
Schema changes:
- Auth.id, User.id, RefreshToken.id: Long -> String (CHAR(36)), generated
  with UUID v7 in code (no more @GeneratedValue).
- FK direction flipped: removed auth.user_id; User now owns the FK
  (user.auth_id NOT NULL UNIQUE). Eliminates the previous "Auth saved
  with user_id NULL" window during registration.
- Bidirectional @OneToOne(mappedBy=...) removed; User -> Auth is the only
  navigable side now.

Infra:
- Add com.github.f4b6a3:uuid-creator (managed in root pom).
- New helper common/util/UuidV7Generator generates time-ordered UUID v7.

Code adjustments to keep compile passing (no new business logic):
- Repositories now extend JpaRepository<T, String>; UserRepository gains
  findByAuth_Id for lookups previously done via Auth.user_id.
- Auth.setUser/getUser usages removed; registerUser no longer needs the
  second authRepository.save (FK is now written by the User insert).
- CustomUserDetails(Auth, User) constructor added; UserDetailsServiceImpl
  loads both so getId() is populated.
- JwtUtil reads userId from CustomUserDetails when available, falls back
  to DB lookup (the fallback will be removed in Phase 3).
- Controllers, DTOs, service interfaces switched Long ids -> String.
- deleteUserAndAuthById now deletes User before Auth to satisfy the new
  FK constraint.

Build status: ./mvnw clean compile -> SUCCESS for all 9 modules.

Note: existing data in user_db must be wiped (the schema is incompatible
with old BIGINT ids). Hibernate ddl-auto=update will not migrate
BIGINT -> CHAR(36) automatically.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>